--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html> 
 <html>
   <head>
-    
+    <script src="/bower_components/angular/angular.js"></script>
   </head>
   <body>
-    Hi from the index file
+    
   </body>
 </html>
 
