Add username input

--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html> 
-<html>
+<html ng-app="app">
   <head>
     <script src="/bower_components/angular/angular.js"></script>
+    <script src="/app/app.js"></script>
   </head>
   <body>
-    
+    <div>
+      <input type="text" ng-model="username" placeholder="Enter your username here">
+
   </body>
 </html>
-
