--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html> 
-<html ng-app="app">
+<html ng-app="myApp">
   <head>
-    <script src="/bower_components/angular/angular.js"></script>
-    <script src="/app/app.js"></script>
+    <script src="./bower_components/angular/angular.js"></script>
+    <script src="./app/app.js"></script>
+    <script src="./app/usernameController.js"></script>
   </head>
   <body>
-    <div>
-      <input type="text" ng-model="username" placeholder="Enter your username here">
+    <div ng-controller="usernameController">
+      <input ng-model="username">
+      {{user(username)}}
+      </div>
 
   </body>
 </html>
