Render 'hello' from scoresController using ngview

--- a/client/index.html
+++ b/client/index.html
@@ -19,9 +19,11 @@
     </div>
     <hr>
     <nav>
-      <a href="/game">Game</a>
-      <a href="/scores">Leaderboard</a>
+      <a href="#!game">Game</a>
+      <a href="#!scores">Leaderboard</a>
     </nav>
+
+    <div ng-view></div>
     
 
   </body>
