--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <script src="./app/app.js"></script>
     <script src="./app/usernameController.js"></script>
     <script src="./app/scoresController.js"></script>
+    <script src="./app/gameController.js"></script>
   </head>
   <body>
     <div class="login">
