--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html> 
 <html ng-app="myApp">
   <head>
+    <link rel="stylesheet" href="./style.css">
     <script src="./bower_components/angular/angular.js"></script>
     <script src="./bower_components/angular-route/angular-route.js"></script>
     <script src="./app/app.js"></script>
