Improve username handling, able to query database for single user

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
     <script src="./app/usernameController.js"></script>
     <script src="./app/scoresController.js"></script>
     <script src="./app/gameController.js"></script>
+    <script src="./app/myscoresController.js"></script>
   </head>
   <body>
     <h1>What's My Time?</h1>
@@ -24,6 +25,7 @@
     <nav>
       <a href="#!game">Game</a>
       <a href="#!scores">Leaderboard</a>
+      <a href="#!myscores">My Scores</a>
     </nav>
 
     <div ng-view></div>
