First attempt at API call

--- a/client/index.html
+++ b/client/index.html
@@ -9,17 +9,18 @@
     <script src="./app/scoresController.js"></script>
     <script src="./app/gameController.js"></script>
     <script src="./app/myscoresController.js"></script>
+    <script src="./app/videoListController.js"></script>
     
   </head>
   <body>
     <h1>What's My Time?</h1>
-   
     <hr>
     <nav>
       <a href="#!login">Login</a>
       <a href="#!game">Game</a>
       <a href="#!scores">Leaderboard</a>
       <a href="#!myscores">My Scores</a>
+      <a href="#!videolist">Video Resources</a>
     </nav>
 
     <div ng-view></div>
