successful API call

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
     <script src="./app/gameController.js"></script>
     <script src="./app/myscoresController.js"></script>
     <script src="./app/videoListController.js"></script>
+    <script src="./app/search.js"></script>
     
   </head>
   <body>
