Successful PUT, initial css

--- a/client/index.html
+++ b/client/index.html
@@ -17,11 +17,12 @@
     <h1>What's My Time?</h1>
     <hr>
     <nav>
-      <a href="#!login">Login</a>
-      <a href="#!game">Game</a>
-      <a href="#!scores">Leaderboard</a>
-      <a href="#!myscores">My Scores</a>
-      <a href="#!videolist">Video Resources</a>
+      <ul>
+      <li> <a href="#!login">Login</a></li>
+      <li> <a href="#!game">Game</a></li>
+      <li> <a href="#!scores">Leaderboard</a></li>
+      <li> <a href="#!myscores">My Scores</a></li>
+      <li> <a href="#!videolist">Video Resources</a></li>
     </nav>
 
     <div ng-view></div>
