--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html ng-app="myApp">
   <head>
     <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito|Quicksand|Varela+Round" rel="stylesheet">
     <script src="./bower_components/angular/angular.js"></script>
     <script src="./bower_components/angular-route/angular-route.js"></script>
     <script src="./app/app.js"></script>
